Added emit events to the readme and updated the roadmap

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "keywords": [
     "stream",
     "mp3",
-    "player"
+    "player",
+    "audio"
   ],
   "author": "Michael Gillett",
   "license": "MIT",
